--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,58 +1,59 @@
 body {
-    line-height: 1.1em;
-    width: 1100px;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    position: absolute;
-    background-color: black;
-    color: beige;
-}
-
-.button {
-    background-color: beige;
-    color: black;
-    padding: 15px 20px;
-    font-size: 22px;
-    text-align: center;
-}
-
-img {
-    position: absolute;
-    width: 1100px;
-    text-align: left;
-    top: 160px;
-    left: 10px;
+    width: 100%;
+    background: url("../images/hogwarts-3476786_1920x2100.svg");
+    background-color: #28285A;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #container, {
+    width: 75%;
+    line-height: 1.1em;
     text-align: left;
+    font-family: 'Muli', sans-serif;
+    color: beige;
     display: block;
-    width: 750px;
+}
+
+header {
+    font-size: 40px;
+    font-family: 'Playfair Display', serif;
+    color: lightyellow;
+    text-align: center;
+}
+
+p {
+    font-size: 18px;
+    padding-top: 10px;
+    color: lightyellow;
+}
+
+label {
+    color: white;
+    padding: 0px 0px 50px;
+}
+
+.button {
+    background-color: lightyellow;
+    color: black;
+    padding: 10px 12px;
+    font-family: 'Muli', sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+#timer {
+    font-family: 'Muli', sans-serif;
+    font-weight: 600;
+    color: lightyellow;
+    font-size: 32px;
+    text-align: left;
+    top: 80px;
 }
 
 #form, #results {
     margin: auto;
-    position: relative;
     margin: 0px 20px 40px;
     text-align: left;
-    top: 20px;
-}
-
-h1 {
-    font-size: 65px;
-    font-family: 'Chonburi', cursive;
-    color: burlywood;
-}
-
-p {
-    font-size: 16px;
-    padding-top: 10px;
-    color: burlywood;
-}
-
-section {
-    color: bisque;
-    font-size: 24px;
-    text-align: left;
-    top: 80px;
+    top: 50px;
 }
