updated JS and CSS

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,6 +4,8 @@ body {
     background-color: #28285A;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Muli', sans-serif;
+    font-weight: 600;
 }
 
 #container, {
@@ -24,7 +26,7 @@ header {
 
 p {
     font-size: 18px;
-    padding-top: 10px;
+    padding-top: 15px;
     color: lightyellow;
 }
 
